Balance consumer snapshot proxy across pods
Force new connections per request so the frontend can discover multiple consumer replicas.